fixed layout issue where east/west containers were uneven

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,5 +16,7 @@ section {
 .location-info {
     display:none;
 }
-
+.direction {
+    margin: 1.5rem;
+}
  
